--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Bajix/vottu/issues"
   },
-  "homepage": "https://github.com/Bajix/vottu#readme"
+  "homepage": "https://github.com/Bajix/vottu#readme",
+  "devDependencies": {
+    "chai": "^3.2.0",
+    "mocha": "^2.2.5"
+  }
 }
