--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "homepage": "https://github.com/Bajix/vottu#readme",
   "devDependencies": {
     "chai": "^3.2.0",
-    "mocha": "^2.2.5"
+    "config": "^1.15.0",
+    "mocha": "^2.2.5",
+    "mongoose": "^4.1.3",
+    "mongoose-fixture-factory": "^1.1.0",
+    "mongoose-validator": "^1.2.3"
   }
 }
