--- a/package.json
+++ b/package.json
@@ -18,11 +18,22 @@
   },
   "homepage": "https://github.com/Bajix/vottu#readme",
   "devDependencies": {
+    "body-parser": "^1.13.3",
     "chai": "^3.2.0",
     "config": "^1.15.0",
+    "express": "^4.13.3",
+    "express-error-funnel": "0.0.2",
+    "express-validator": "^2.15.1",
     "mocha": "^2.2.5",
     "mongoose": "^4.1.3",
     "mongoose-fixture-factory": "^1.1.0",
-    "mongoose-validator": "^1.2.3"
+    "mongoose-validator": "^1.2.3",
+    "sinon": "^1.16.1",
+    "supertest": "^1.0.1"
+  },
+  "dependencies": {
+    "async": "^1.4.2",
+    "kareem": "^1.0.1",
+    "node-restify-errors": "^0.1.0"
   }
 }
