--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
   },
   "homepage": "https://github.com/Bajix/vottu#readme",
   "devDependencies": {
-    "body-parser": "^1.14.2",
+    "body-parser": "^1.15.0",
     "chai": "^3.5.0",
-    "config": "^1.19.0",
+    "config": "^1.20.1",
     "express": "^4.13.4",
     "express-error-funnel": "0.0.2",
-    "express-validator": "^2.19.0",
+    "express-validator": "^2.20.3",
     "mocha": "^2.4.5",
-    "mongoose": "^4.4.1",
-    "mongoose-fixture-factory": "^1.1.0",
+    "mongoose": "^4.4.14",
+    "mongoose-fixture-factory": "^1.2.1",
     "mongoose-validator": "^1.2.4",
     "sinon": "^1.17.3",
-    "supertest": "^1.1.0"
+    "supertest": "^1.2.0"
   },
   "dependencies": {
-    "async": "^1.5.2",
+    "async": "^2.0.0-rc.3",
     "kareem": "^1.0.1",
     "node-restify-errors": "^0.1.0"
   }
